--- a/CSS/ARSENAL-Q62.css
+++ b/CSS/ARSENAL-Q62.css
@@ -182,12 +182,16 @@ h4 {
 	font-size: 3rem;
 	line-height: 4rem;
 	letter-spacing: 0.25rem;
+	display: inline-block;
 }
 
 .Catch-copy_min {
 	font-weight: bold;
 	font-size: 2rem;
 	letter-spacing: 0.25rem;
+	display: inline-block;
+	margin-top: 16px;
+	margin-bottom: 0;
 }
 
 @media (max-width: 1000px) {
@@ -198,6 +202,16 @@ h4 {
 	.Catch-copy {
 		font-size: 2rem;
 	}
+}
+
+.Content-number {
+	background-color: #FFF;
+	color: #000;
+	font-weight: bold;
+	font-size: 3rem;
+	display: inline-block;
+	margin: 0;
+	padding: 24px;
 }
 
 /* - - - - - - - - - - 汎用コンポーネント周り - - - - - - - - - - */
@@ -257,7 +271,7 @@ h4 {
 	position: fixed;
 }
 
-.fa-brands {
+i {
 	margin: 0px 16px;
 }
 
@@ -459,11 +473,11 @@ header a:hover {
 
 .Update-content:hover {
 	background-color: #C0FF00;
+	color: #000;
 }
 
 .Update-content_no-link {
 	display: block;
-	color: #000;
 	padding: 16px 24px;
 	border-bottom: 1px solid #999;
 }
