--- a/CSS/ARSENAL-Q62.css
+++ b/CSS/ARSENAL-Q62.css
@@ -577,11 +577,12 @@ header a:hover {
 	background-color: #F0F0F0;
 	/* backdrop-filter: blur(3px); */
 	border-radius: 16px;
-	padding: 32px;
+	padding: 32px 32px 40px 32px;
 	display: inline-block;
 	width: 100%;
 	color: #000;
 	position: relative;
+	margin-bottom: 32px;
 }
 
 .GoToPage {
@@ -612,9 +613,10 @@ header a:hover {
 	font-weight: bold;
 	background-color: #C0FF00;
 	padding: 8px 0 8px 16px;
-	border-radius: 3rem;
+	border-radius: 16px 0 16px 0;
 	position: absolute;
-	right: -24px;
+	right: 0px;
+	bottom: -16px;
 }
 
 @media (max-width: 1000px) {
@@ -650,6 +652,10 @@ header a:hover {
 	
 	.Product-description btn {
 		width: auto;
+	}
+	
+	.Product-min {
+		margin-bottom: 0px;
 	}
 }
 
