--- a/CSS/ARSENAL-Q62.css
+++ b/CSS/ARSENAL-Q62.css
@@ -49,8 +49,11 @@ a {
 }
 
 .single-column_center {
-	align-items: center;
-	max-width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .Column_wrapper {
