--- a/CSS/ARSENAL-Q62_single.css
+++ b/CSS/ARSENAL-Q62_single.css
@@ -137,6 +137,11 @@
 
 /* - - - - - - ここからFeature周り - - - - - - */
 
+.single-column_center iframe{
+	width: 100%;
+	height: 480px;
+}
+
 .V-Card {
 	width: 100%;
 	display: flex;
