--- a/CSS/ARSENAL-Q62.css
+++ b/CSS/ARSENAL-Q62.css
@@ -167,6 +167,18 @@ h1 {
 	margin: 0 auto;
 }
 
+.randomTextTrigger {
+    opacity: 0;
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    transition: opacity 1s ease;
+}
+
+.randomText {
+    opacity: 1;
+}
+
 h3 {
 	font-weight: bold;
 	font-size: 1.5rem;
